# dr-code

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  example.pyproject.toml  pyproject.toml
.scratch/eval-run-lifecycle/: PRD.md  manual-testing-2026-06-22.md
.scratch/eval-run-lifecycle/issues/: 01-pydantic-migration.md  02-lifecycle-module-skeleton.md  03-mongo-backed-seed-export.md  04-worker-lifecycle-commands.md  05-one-shot-run-docs-cleanup.md
configs/: openrouter_profiles.yaml
docs/: code-eval-work-needed.md  flexible_worker_pools.md  sandlock.md
docs/adr/: 0001-mongo-backed-evaluation-run-state.md
docs/investigation/: code-eval.md  dr-bottleneck.md  dr-llm-humaneval-pool.md  dr-providers.md  nl-code.md  synthesis.md
docs/plans/: README.md  overview.md  pipeline-runbook.md  stage-01-generation-dataset.md  stage-02-handoff.md  stage-02-parsing.md  stage-03-handoff.md  stage-03-testing.md  stage-04-analysis.md  stage-04-handoff.md
nbs/: analyze_eval_run.py
scripts/: analyze_eval_run.py  build_humaneval_snapshot.py  demo_pipeline.py  demo_stage1.py  demo_stage2.py  demo_stage3.py  eval_run.py  generate_decoder_attempts.py  hello_world.py  import_pool_attempts.py  parse_attempts.py  run_eval_pipeline.py  test_attempts.py  tune_test_workers.py
src/dr_code/: __init__.py
src/dr_code/analysis/: __init__.py  aggregate.py  compress.py  export.py  join.py
src/dr_code/datasets/: __init__.py  display.py  export.py  humaneval_loader.py  pool_loader.py  stats.py
src/dr_code/generation/: __init__.py  batch.py  profiles.py  prompts.py  run_config.py
src/dr_code/models/: __init__.py  attempts.py  base.py  humaneval.py  outcomes.py
src/dr_code/parsing/: __init__.py  adapter.py  config.py  display.py
tests/: conftest.py
tests/unit/: test_analysis_aggregate.py  test_analysis_compress.py  test_analysis_join.py  test_analyze_eval_run_cli.py  test_attempt_schemas.py  test_display.py  test_eval_run_cli.py  test_export.py  test_generation_batch.py  test_humaneval_loader.py  test_parsing_adapter.py  test_pipeline_jobs.py  test_pipeline_lifecycle.py  test_pipeline_metadata.py  test_pipeline_one_job.py  test_pipeline_report.py  test_pipeline_tune.py  test_pool_loader.py  test_profiles.py  test_prompts.py  test_stats.py  test_test_attempts_cli.py  test_testing_adapter.py  test_testing_display.py  test_testing_execution.py
(+24 files in other folders)
