[project]
name = "dr-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "code-eval==0.1.1",
    "marimo[recommended]>=0.23.10",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]

[tool.uv.sources]
code-eval = { path = "../code-eval", editable = true }

# code-eval pins ruff==0.8.4 for subprocess normalizers; dr-code parse workers
# use EXTRACTION_CONFIG (no normalizers) and dev lint needs a current ruff.
[tool.uv]
override-dependencies = ["ruff>=0.15.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
include = ["scripts/**/*.py", "src/**/*.py"]
line-length = 79

[tool.ty.src]
include = ["scripts", "src"]
exclude = ["nbs", "tests"]
