[project]
name = "dr-code"
version = "0.1.0"
description = "Compression–correctness evaluation harness for HumanEval+ decoder attempts"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "code-eval==0.1.1",
    "datasets>=3.0,<4",
    "dr-providers==0.1.0",
    "dr-queues",
    "marimo[recommended]>=0.23.10",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
    "zstandard>=0.25.0",
]

[tool.uv.sources]
code-eval = { path = "../code-eval", editable = true }
dr-providers = { path = "../dr-providers", editable = true }
dr-queues = { path = "../dr-queues", editable = true }

# code-eval pins ruff==0.8.4 for subprocess normalizers; dr-code parse workers
# use EXTRACTION_CONFIG (no normalizers) and dev lint needs a current ruff.
[tool.uv]
override-dependencies = ["ruff>=0.15.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
include = ["scripts/**/*.py", "src/**/*.py"]
line-length = 79

[tool.ty.src]
include = ["scripts", "src"]
exclude = ["nbs", "tests"]
